--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon src/app.ts",
-    "test": "npx jest -i"
+    "test": "NODE_OPTIONS=--experimental-vm-modules jest -i"
   },
   "keywords": [],
   "author": "",
